--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.3.5",
+    "react-icons": "^4.8.0",
     "react-player": "^2.12.0",
     "react-top-loading-bar": "^2.3.1",
     "typescript": "5.0.4"
