--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@chakra-ui/react": "^2.5.5",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@sanity/client": "^5.4.2",
+    "@sanity/image-url": "^1.0.2",
     "@types/node": "18.15.11",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
@@ -20,12 +22,14 @@
     "framer-motion": "^10.12.4",
     "gsap": "^3.11.5",
     "next": "13.3.0",
+    "next-sanity-image": "^6.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.3.5",
     "react-icons": "^4.8.0",
     "react-player": "^2.12.0",
     "react-top-loading-bar": "^2.3.1",
+    "swiper": "^9.2.3",
     "typescript": "5.0.4"
   }
 }
