--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.10.6",
     "@sanity/client": "^5.4.2",
     "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.5.0",
     "@types/node": "18.15.11",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
@@ -29,7 +30,12 @@
     "react-icons": "^4.8.0",
     "react-player": "^2.12.0",
     "react-top-loading-bar": "^2.3.1",
+    "sanity": "^3.0.0",
+    "styled-components": "^5.2.0",
     "swiper": "^9.2.3",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@sanity/eslint-config-studio": "^2.0.1"
   }
 }
