--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
     "@vercel/analytics": "^1.0.0",
+    "@vercel/kv": "^0.1.1",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "framer-motion": "^10.12.4",
     "gsap": "^3.11.5",
     "next": "13.3.0",
     "next-sanity-image": "^6.0.0",
+    "nid": "^2.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.3.5",
@@ -34,7 +36,8 @@
     "sanity": "^3.0.0",
     "styled-components": "^5.2.0",
     "swiper": "^9.2.3",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@sanity/eslint-config-studio": "^2.0.1"
