--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@sanity/client": "^5.4.2",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.5.0",
+    "@studio-freight/lenis": "^1.0.16",
     "@types/node": "18.15.11",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
@@ -28,6 +29,7 @@
     "next-sanity-image": "^6.0.0",
     "nid": "^2.0.1",
     "react": "18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.3.5",
     "react-icons": "^4.8.0",
