--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@sanity/client": "^5.4.2",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.5.0",
+    "@studio-freight/hamo": "^0.6.19",
     "@studio-freight/lenis": "^1.0.16",
     "@types/node": "18.15.11",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
     "@vercel/analytics": "^1.0.0",
     "@vercel/kv": "^0.1.1",
+    "chakra-dayzed-datepicker": "^0.2.10",
+    "dayzed": "^3.2.3",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "framer-motion": "^10.12.4",
@@ -29,6 +32,7 @@
     "next-sanity-image": "^6.0.0",
     "nid": "^2.0.1",
     "react": "18.2.0",
+    "react-confetti": "^6.1.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.3.5",
