first blur image process and crew responsive also resumen page

--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "@chakra-ui/react": "^2.5.5",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@plaiceholder/next": "^3.0.0",
     "@sanity/client": "^5.4.2",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.5.0",
     "@studio-freight/hamo": "^0.6.19",
     "@studio-freight/lenis": "^1.0.16",
     "@types/node": "18.15.11",
-    "@types/react": "18.0.37",
+    "@types/react": "^18.2.22",
     "@types/react-dom": "18.0.11",
     "@vercel/analytics": "^1.0.0",
     "@vercel/kv": "^0.1.1",
@@ -31,6 +32,7 @@
     "next": "13.3.0",
     "next-sanity-image": "^6.0.0",
     "nid": "^2.0.1",
+    "plaiceholder": "^3.0.0",
     "react": "18.2.0",
     "react-confetti": "^6.1.0",
     "react-device-detect": "^2.2.3",
@@ -39,10 +41,11 @@
     "react-icons": "^4.8.0",
     "react-player": "^2.12.0",
     "react-top-loading-bar": "^2.3.1",
+    "require": "^2.4.20",
     "sanity": "^3.0.0",
     "styled-components": "^5.2.0",
     "swiper": "^9.2.3",
-    "typescript": "5.0.4",
+    "typescript": "^5.2.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
